fix wrong colors

--- a/src/app/common/themes/themes.less
+++ b/src/app/common/themes/themes.less
@@ -86,8 +86,9 @@
     --line-text-color: #f2f4f2;
     --line-svg-fill: var(--line-text-color);
     --line-svg-hover-fill: #eceeec;
-    --line-selected-border-color: #f0f1f0;
-    --line-separator-color: #f6f7f6;
+    --line-selected-border-color: rgb(193, 195, 193);
+    --line-separator-color: rgb(126, 126, 126);
+    --line-meta-line1-color: rgb(150, 152, 150);
 
     --base-background: rgba(21, 23, 21, 1);
 
@@ -150,7 +151,7 @@
     --term-green: #4e9a06;
 
     // semantic vars based on  --term-green
-    --line-active-border-color: #8ebb39;
+    --line-active-border-color: rgb(97, 158, 72);
 
     --term-yellow: #c4a000;
 
