--- a/src/app/line/lines.less
+++ b/src/app/line/lines.less
@@ -82,7 +82,7 @@
     }
 
     .meta.meta-line1 {
-        color: var(--line-text-color) !important;
+        color: var(--line-meta-line1-color) !important;
         font-size: 11px;
     }
 
@@ -371,7 +371,7 @@
             svg {
                 width: 1em;
                 margin-right: 0.5em;
-                fill: var(--line-text-color);
+                fill: var(--line-meta-line1-color);
             }
         }
 
@@ -385,7 +385,7 @@
             border-radius: 50%;
             line-height: 1em;
             svg {
-                fill: var(--line-text-color);
+                fill: var(--line-meta-line1-color);
                 &:hover {
                     fill: var(--line-svg-hover-fill);
                 }
